--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "repository": "git@github.com:ktv18/react-component-generator.git",
   "author": "ktv18 <tarasklyushta@gmail.com>",
   "license": "UNLICENSED",
-    "bin": {
+  "bin": {
     "generate-component": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc --project './tsconfig.json'",
     "dev": "tsc --project './tsconfig.json' --watch"
   },
-  "devDependencies": {
-    "@types/common-tags": "^1.8.1",
-    "@types/inquirer": "^7.3.3",
-    "@types/node": "^16.4.13",
+  "dependencies": {
     "commander": "^8.1.0",
     "common-tags": "^1.8.0",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.2",
-    "recursive-copy": "^2.0.13",
+    "recursive-copy": "^2.0.13"
+  },
+  "devDependencies": {
+    "@types/common-tags": "^1.8.1",
+    "@types/inquirer": "^7.3.3",
+    "@types/node": "^16.4.13",
     "typescript": "^4.3.5"
   }
 }
